--- a/assignments/final term/index.html
+++ b/assignments/final term/index.html
@@ -27,29 +27,53 @@
         <nav>
            
             <ul class="topNav">
-                <li><a onclick="toggleMenu()">&#9776; menu</a></li>
-                <li><a href="index-9.html" >  home</a></li>
-                <li ><a href= "preston-10.html">preston</a></li>
-                <li><a href="soda-springs.html">soda springs</a></li>
-                <li><a href="fiah-haven.html">fish haven</a></li>
-                <li   id="active"><a href="stormcenter-9.html">storm center</a></li>
-                <li><a href= "gallery-9.html">gallery</a></li>
+                <li ><a onclick="toggleMenu()">&#9776; menu</a></li>
+                <li><a href="index.html" >  home</a></li>
+                <li ><a href= "reservation.html">reservations</a></li>
+                <li><a href="temples.html">temples</a>
+                    <ul class="dropdown">
+                        <li><a>tmple1</a></li>
+                        <li><a>temple 2</a></li>
+                        <li><a>temple 3</a></li>
+                        <li><a>temple 4</a></li>
+                    </ul>
+                </li>
+                <li><a href="services.html">services</a>
+                    <ul class="dropdown">
+                        <li><a>full-time missionaries</a></li>
+                        <li><a>receptions</a></li>
+                    </ul>
+                </li>
+                <li   id="active"><a href="contact.html">contact</a></li>
             </ul>
         </nav>
         
         <main>
+            <h3>Home</h3>
+            <section>
+                <div></div>
+                <div></div>
+            </section>
+            <section>
+                <div></div>
+                <div></div>
+            </section>
+            <section>
+                <div></div>
+                <div></div>
+            </section>
         </main>
 
         <footer>
             <section>
                     <h5> contact info</h5>
                     phone: 000-000-1234<br>
-                    email:iamnotrealwebsite@hotelinn.com<br><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d5116841.758548287!2d-118.4979723692034!3d-79.2579946203537!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1562465283016!5m2!1sen!2sus" width="300" height="225" ></iframe>
+                    email:iamnotrealwebsite@hotelinn.com<br>"<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3101.4048370285054!2d-77.0977204850091!3d38.98325594948435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7c97b6b3b5b43%3A0x9c8eb1c5547b83eb!2s4800+Montgomery+Ln+%23300%2C+Bethesda%2C+MD+20814!5e0!3m2!1sen!2sus!4v1563591856302!5m2!1sen!2sus" width="300" height="225" frameborder="0" style="border:0" allowfullscreen></iframe>
                 <!--map-->
                 </section>
                 <p>&copy;2019 the weather potato | Attributions:<a href="https://openweathermap.org/">Current weather data provided by OpenWeatherMap, under the CC BY-SA 4.0 license.</a> |<span id="currentdate"></span> </p>
         </footer>
-        <script src="script/navagation.js"></script>
+        <script src="script/navigation.js"></script>
         <script src="script/currentdate.js"></script>
         <script src="script/rating.js"></script>
     </body>
