json fix part 1

--- a/assignments/final-term/temples.html
+++ b/assignments/final-term/temples.html
@@ -49,7 +49,7 @@
             </nav>
         
         <main>
-            <div class="templeinfo"></div>
+            <div class="templeData"></div>
         </main>
 
         <footer>
