--- a/assignments/final-term/reservation.html
+++ b/assignments/final-term/reservation.html
@@ -55,14 +55,22 @@
                         first Name<br>
                         *<input type="text" name="name" placeholder="first name" pattern="[A-Za-z]{5,}"required><br>
                         last Name<br>
-                        *<input type="text" name="name" placeholder="last name" pattern="[A-Za-z]{5,}"required><br>
+                        *<input type="text" name="name" placeholder="last name" pattern="[A-Za-z]{7,}"required><br>
                         Email<br>
                         <input type="email" name="email" placeholder="example@email.com"><br>
                         Phone Number<br>
                         *<input type="tel" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="000-000-0000" required><br>
+                        Street Address<br>
+                        *<input type="text" name="name" placeholder="Address" pattern="[A-Za-z 0-9]"required><br>
+                        Zipcode
+                        *<input type="text" name="name" placeholder="Zipcode" pattern="[0-9]{5,}"required><br>
+                        Enter Country<br>
+                        *<input type="text" name="name" placeholder="Country" pattern="[A-Za-z]"required><br>
+                        Enter State/Province<br>
+                        *<input type="text" name="name" placeholder="state/province" pattern="[A-Za-z]"required><br>
                         temple location<br>
                         <select required>
-                            <option value="selectregion"  selected="default"  disabled>select region</option>
+                            <option value="selectlocation"  selected="default"  disabled>select location</option>
                             <option value="philidilphia" >philidilphia</option>
                             <option value="chicago" >chicago</option>
                             <option value="laie" >laie</option>
@@ -72,7 +80,7 @@
                         <input list="stype" name="stype" >
                             <datalist id="stype">
                                 <option value="single bed"></option>
-                                <option value="double bed"></option>
+                                <option value="two bed"></option>
                                 <option value="king bed"></option>
                                 <option value="Family suite"></option>
                                 
@@ -81,7 +89,7 @@
                         *<input type="date" name="date" required><br>
                         to
                         *<input type="date" name="date" required><br>
-                        Comments<br>
+                        Accomadations/Comments<br>
                         <textarea class="full"  name="comments"></textarea><br>
                 </fieldset>
              <input class="full" type="submit" value="Submit Storm Report">
