--- a/assignments/final-term/reservation.html
+++ b/assignments/final-term/reservation.html
@@ -77,7 +77,7 @@
                             <option value="germany" >germany</option>
                         </select>><br>
                         room Type<br>
-                        <input list="stype" name="stype" >
+                        *<input list="stype" name="stype" required >
                             <datalist id="stype">
                                 <option value="single bed"></option>
                                 <option value="two bed"></option>
