--- a/assignments/final-term/index.html
+++ b/assignments/final-term/index.html
@@ -49,18 +49,35 @@
         </nav>
         
         <main>
-            <h3>Home</h3>
-            <section>
-                <div></div>
-                <div></div>
+            <h2>Home</h3>
+            <section class="about">
+                <div id="us">
+                    <h3>About Us</h2>
+                    <p>The Temple Inn & Suites is a hotel chain headquartered in Bethesda, MD
+                        that builds and manages specialized hotel accommodations near temple
+                        locations of The Church of Jesus Christ of Latter-day Saints around
+                        the world. The owner-operated company caters to temple workers, patrons,
+                        and their families by providing specialized services and accommodations
+                        that meet the needs of those patrons. The hotel accommodations and
+                        services are available to anyone willing to abide by the terms and
+                        policies outlined by the company. The overall goal of the website
+                        project is to promote and provide information about the specialized
+                        services that this hotel chain offers to meet the needs of temple
+                        patrons who come to serve in the temple or who participate in events
+                        such as sealings, weddings, receptions, and youth trips.</p>
+            </div>
+                <div id="image">image</div>
+            </section>
+            <section class="book">
+                <div>image</div>
+                <div>
+                    <h3>Book Your Temple Trip Stay Today!</h3>
+                    <button>Book Now</button>
+                </div>
             </section>
             <section>
-                <div></div>
-                <div></div>
-            </section>
-            <section>
-                <div></div>
-                <div></div>
+                <div class="templeChoice">temple of choice or slide show</div>
+                <div>image</div>
             </section>
         </main>
 
