half of the battle

--- a/assignments/final-term/contact.html
+++ b/assignments/final-term/contact.html
@@ -51,18 +51,18 @@
         <main>
             contact Info
             map
-                <fieldset>
+                <fieldset action=""method="GET">
                         <legend>Personal Info</legend>
-                        Full Name<br>
-                        *<input type="text" name="name" placeholder="full name" pattern="[A-Za-z]{5,}"required><br>
-                        Email<br>
-                        <input type="email" name="email" placeholder="example@email.com"><br>
-                        Phone Number<br>
-                        *<input type="tel" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="000-000-0000" required><br>
-                        Comments<br>
-                        <textarea class="full"  name="comments"></textarea><br>
+                        Full Name
+                        *<input type="text" name="name" placeholder="full name" pattern="[A-Za-z]{5,}"required>
+                        Email
+                        <input type="email" name="email" placeholder="example@email.com">
+                        Phone Number
+                        *<input type="tel" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="000-000-0000" required>
+                        Comments
+                        <textarea class="full"  name="comments"></textarea>
                 </fieldset>
-             <input class="full" type="submit" value="Submit Storm Report">
+             <input class="full" type="submit" value="Contact Us">
             </form>
         </main>
 
