--- a/assignments/final-term/index.html
+++ b/assignments/final-term/index.html
@@ -75,9 +75,8 @@
                     <button>Book Now</button>
                 </div>
             </section>
-            <section>
-                <div class="templeChoice">temple of choice or slide show</div>
-                <div>image</div>
+            <section class="templeChoice">
+               
             </section>
         </main>
 
@@ -93,5 +92,6 @@
         <script src="script/navigation.js"></script>
         <script src="script/currentdate.js"></script>
         <script src="script/rating.js"></script>
+        <script src="script/templeinfo.js"></script>
     </body>
 </html>
