--- a/assignments/final-term/services.html
+++ b/assignments/final-term/services.html
@@ -47,8 +47,9 @@
                 </ul>
             </nav>
         
-        <main>
+        <main class=services>
             <Section class="speacial">
+                <div class="div1">
                 <h3>Specialized Services</h3>
                 <ul>
                     <li>Free access to changing rooms and bathroom facilities for temple patrons who have traveled far and need to change to and from church clothes</li>
@@ -58,8 +59,11 @@
                     <li>A wedding reception hall that can be easily customized with a simple catering menu and kitchen access for food preparation and serving</li>
                     <li>A family search center that supports family search and ordinance work</li>
                 </ul>
+            </div>
+            <div class=div2></div>
             </Section>
-            <section>
+            <section class=amenities>
+                <div class="div2">
                     <h3>Free Amenities</h3>
                     <ul>
                         <li>Breakfast</li>
@@ -70,6 +74,8 @@
                         <li>Temple shuttle</li>
                         <li>Family history consultation and family ordinance card service</li>
                     </ul>
+                </div>
+                <div class="div1"></div>
             </section>
         </main>
 
