main css layout

--- a/assignments/final-term/contact.html
+++ b/assignments/final-term/contact.html
@@ -51,7 +51,8 @@
         <main>
             contact Info
             map
-                <fieldset action=""method="GET">
+            <form action="thankyouFeedback.html"method="GET" >
+                <fieldset>
                         <legend>Personal Info</legend>
                         Full Name
                         *<input type="text" name="name" placeholder="full name" pattern="[A-Za-z]{5,}"required>
@@ -75,7 +76,7 @@
                 </section>
                 <p>&copy;2019 the weather potato | Attributions:<a href="https://openweathermap.org/">Current weather data provided by OpenWeatherMap, under the CC BY-SA 4.0 license.</a> |<span id="currentdate"></span> </p>
         </footer>
-        <script src="script/navagation.js"></script>
+        <script src="script/navigation.js"></script>
         <script src="script/currentdate.js"></script>
         <script src="script/rating.js"></script>
     </body>
