--- a/assignments/final-term/reservation.html
+++ b/assignments/final-term/reservation.html
@@ -49,7 +49,7 @@
             </nav>
         
         <main>
-            <form action=""method="GET">
+            <form action="thankyouBooking.html"method="GET">
                 <fieldset>
                         <legend>Personal Info</legend>
                     
@@ -118,7 +118,7 @@
                 </section>
                 <p>&copy;2019 the weather potato | Attributions:<a href="https://openweathermap.org/">Current weather data provided by OpenWeatherMap, under the CC BY-SA 4.0 license.</a> |<span id="currentdate"></span> </p>
         </footer>
-        <script src="script/navagation.js"></script>
+        <script src="script/navigation.js"></script>
         <script src="script/currentdate.js"></script>
         <script src="script/rating.js"></script>
     </body>
