--- a/assignments/final-term/services.html
+++ b/assignments/final-term/services.html
@@ -60,10 +60,12 @@
                     <li>A family search center that supports family search and ordinance work</li>
                 </ul>
             </div>
-            <div class=div2></div>
+            <div class=div2>
+                    <img src="images/celeste.jpg">
+            </div>
             </Section>
             <section class=amenities>
-                <div class="div2">
+                <div class="div1">
                     <h3>Free Amenities</h3>
                     <ul>
                         <li>Breakfast</li>
@@ -75,7 +77,9 @@
                         <li>Family history consultation and family ordinance card service</li>
                     </ul>
                 </div>
-                <div class="div1"></div>
+                <div class="div2">
+                    <img src="images/celeste.jpg">
+                </div>
             </section>
         </main>
 
@@ -88,7 +92,7 @@
                 </section>
                 <p>&copy;2019 the weather potato | Attributions:<a href="https://openweathermap.org/">Current weather data provided by OpenWeatherMap, under the CC BY-SA 4.0 license.</a> |<span id="currentdate"></span> </p>
         </footer>
-        <script src="script/navagation.js"></script>
+        <script src="script/navigation.js"></script>
         <script src="script/currentdate.js"></script>
         <script src="script/rating.js"></script>
     </body>
