--- a/assignments/final-term/temples.html
+++ b/assignments/final-term/temples.html
@@ -43,7 +43,7 @@
             </nav>
         
         <main>
-            <div class="templeData"></div>
+            <div id="temple" class="templegeneral"></div>
         </main>
 
         <footer>
@@ -55,9 +55,9 @@
                 </section>
                 <p>&copy;2019 the weather potato | Attributions:<a href="https://openweathermap.org/">Current weather data provided by OpenWeatherMap, under the CC BY-SA 4.0 license.</a> |<span id="currentdate"></span> </p>
         </footer>
-        <script src="script/navagation.js"></script>
+        <script src="script/navigation.js"></script>
         <script src="script/currentdate.js"></script>
         <script src="script/rating.js"></script>
-        <script src="script/templeinfo.js"></script>
+        <script src="script/temples/templeinfo.js"></script>
     </body>
 </html>
