pages/json update

--- a/assignments/final-term/temples.html
+++ b/assignments/final-term/temples.html
@@ -47,17 +47,21 @@
         </main>
 
         <footer>
-            <section>
-                    <h5> contact info</h5>
-                    phone: 000-000-1234<br>
-                    email:iamnotrealwebsite@hotelinn.com<br><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d5116841.758548287!2d-118.4979723692034!3d-79.2579946203537!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1562465283016!5m2!1sen!2sus" width="300" height="225" ></iframe>
-                <!--map-->
-                </section>
+                <section class=footer>
+                        <div class="contactfooter">  <h5> contact info</h5>
+                            phone: 000-000-1234<br>
+                            email:iamnotrealwebsite@hotelinn.com<br>
+                            Address:<br>
+                            4800 Montgomery Ln #300,<br> Bethesda, MD 20814
+                        </div>
+                         <div> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3101.4048370285054!2d-77.0977204850091!3d38.98325594948435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7c97b6b3b5b43%3A0x9c8eb1c5547b83eb!2s4800+Montgomery+Ln+%23300%2C+Bethesda%2C+MD+20814!5e0!3m2!1sen!2sus!4v1563591856302!5m2!1sen!2sus" width="100%" height="225" frameborder="0" style="border:0" allowfullscreen></iframe>
+                          `</div class="map">
+                          <!--map-->
+                      </section>
                 <p>&copy;2019 the weather potato | Attributions:<a href="https://openweathermap.org/">Current weather data provided by OpenWeatherMap, under the CC BY-SA 4.0 license.</a> |<span id="currentdate"></span> </p>
         </footer>
         <script src="script/navigation.js"></script>
         <script src="script/currentdate.js"></script>
-        <script src="script/rating.js"></script>
-        <script src="script/temples/templeinfo.js"></script>
+        <script src="script/temples/newtemple.js"></script>
     </body>
 </html>
