--- a/assignments/final-term/services.html
+++ b/assignments/final-term/services.html
@@ -48,20 +48,21 @@
             </nav>
         
         <main class=services>
+            <h2>Services</h2>
             <Section class="speacial">
                 <div class="div1">
                 <h3>Specialized Services</h3>
                 <ul>
                     <li>Free access to changing rooms and bathroom facilities for temple patrons who have traveled far and need to change to and from church clothes</li>
                     <li>A playroom and low-cost, short-term babysitting services for the children of patrons</li>
-                    <li>Long-term stay accommodations in kitchenette suites for full-time temple missionaries</li>
+                    <li>Long-term stay accommodations in kitchenette suites for full-time temple missionaries<a herf="missionary.html">Leran more</a></li>
                     <li>Temple history themed reception and sitting area</li>
-                    <li>A wedding reception hall that can be easily customized with a simple catering menu and kitchen access for food preparation and serving</li>
+                    <li>A wedding reception hall that can be easily customized with a simple catering menu and kitchen access for food preparation and serving<a herf="reception.html">learn more</a></li>
                     <li>A family search center that supports family search and ordinance work</li>
                 </ul>
             </div>
             <div class=div2>
-                    <img src="images/celeste.jpg">
+                    <img src="images/sitting area.jpg" alt="temple themed sitting areas ">
             </div>
             </Section>
             <section class=amenities>
@@ -78,18 +79,23 @@
                     </ul>
                 </div>
                 <div class="div2">
-                    <img src="images/celeste.jpg">
+                    <img src="images/shuttle.jpg" alt="temple shutttle service">
                 </div>
             </section>
         </main>
 
         <footer>
-            <section>
-                    <h5> contact info</h5>
-                    phone: 000-000-1234<br>
-                    email:iamnotrealwebsite@hotelinn.com<br><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d5116841.758548287!2d-118.4979723692034!3d-79.2579946203537!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1562465283016!5m2!1sen!2sus" width="300" height="225" ></iframe>
-                <!--map-->
-                </section>
+                <section class=footer>
+                        <div class="contactfooter">  <h5> contact info</h5>
+                            phone: 000-000-1234<br>
+                            email:iamnotrealwebsite@hotelinn.com<br>
+                            Address:<br>
+                            4800 Montgomery Ln #300,<br> Bethesda, MD 20814
+                        </div>
+                         <div> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3101.4048370285054!2d-77.0977204850091!3d38.98325594948435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7c97b6b3b5b43%3A0x9c8eb1c5547b83eb!2s4800+Montgomery+Ln+%23300%2C+Bethesda%2C+MD+20814!5e0!3m2!1sen!2sus!4v1563591856302!5m2!1sen!2sus" width="100%" height="225" frameborder="0" style="border:0" allowfullscreen></iframe>
+                          `</div class="map">
+                          <!--map-->
+                      </section>
                 <p>&copy;2019 the weather potato | Attributions:<a href="https://openweathermap.org/">Current weather data provided by OpenWeatherMap, under the CC BY-SA 4.0 license.</a> |<span id="currentdate"></span> </p>
         </footer>
         <script src="script/navigation.js"></script>
