final push with logo

--- a/assignments/final-term/contact.html
+++ b/assignments/final-term/contact.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <header>
-            <!--logo--> <img class= "headerimage" src="images/potat0.png" alt="logo">
+            <!--logo--> <img class= "headerimage" src="images/Artboard 1.png" alt="logo">
             <section class="headings">
                    
                 <h1>The Temple Inn</h1>
