--- a/assignments/final-term/missionary.html
+++ b/assignments/final-term/missionary.html
@@ -15,9 +15,9 @@
     </head>
     <body>
         <header>
-            <!--logo--> <img class= "headerimage" src="images/potat0.png" alt="logo">
+            <!--logo--> <img class= "headerimage" src="images/Artboard 1.png" alt="logo">
             <section class="headings">
-                   
+                    C:\Users\qwert\Documents\jwatkinsm.github.io-1\assignments\final-term\images\Artboard 1.png
                 <h1>The Temple Inn</h1>
              <div class= motto>Where the Spirit Stays</div>
              <!--current conditions-->
