--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <li>lesson 9.2: <a href="assignments/lesson-9/index-9.html"> home page</a></li>
                 <li>lesson 10: <a href="assignments/lesson-10/preston-10.html"> api</a></li>
                 <li>weathersite: <a href="assignments/weathersite/index-9.html"> weathersite</a></li>
+                <li>term: <a href="assignments/final-term/index.html"> temple inn</a></li>
             </ul>
         </main>
 
